tests/samples/valid/import_sum_of_squares.pn
import "sum_of_squares.pn";

fn main() -> i32
{
	var result = sum_of_squares(2, 14);
	return: result
}
