tests/samples/invalid/bitshift_without_types.pn
fn main() -> i32
{
	var mask = 1 << 47;
	return: 200
}
